[ADD] 경기 전체 조회 시의 order 컬럼 추가 #75